%% Mermaid ER diagram for BrightBuy database
%% Entities: product, variant, category, cart, cart_item, user, city, order, delivery

erDiagram
    PRODUCT {
        int Product_ID PK
        int Category_ID FK
        varchar Product_Name
        varchar Brand
        varchar SKU
        text Description
    }

    VARIANT {
        int Variant_ID PK
        int Product_ID FK
        decimal Price
        int Stock_quantity
        varchar Colour
        int Size
        varchar Image_URL
    }

    CATEGORY {
        int Category_ID PK
        varchar Category_Name
    }

    CART {
        int Cart_ID PK
        int User_ID FK
        enum Status
    }

    CART_ITEM {
        int Cart_Item_ID PK
        int Cart_ID FK
        int Product_ID FK
        int Variant_ID FK
        int Quantity
        decimal Total_price
    }

    USER {
        int User_ID PK
        varchar Name
        varchar Password
        varchar Address
        int City_ID FK
        varchar Email
        varchar Role
        varchar image_URL
    }

    CITY {
        int City_ID PK
        varchar City_Name
        bool Main_City
    }

    ORDER {
        bigint Order_Number PK
        int User_ID FK
        int Cart_ID FK
        decimal Total_Amount
        varchar Payment_method
        int Delivery_ID FK
        date Order_Date
    }

    DELIVERY {
        int Delivery_ID PK
        varchar Delivery_Method
        varchar Delivery_Address
        enum Delivery_Status
        date Estimated_delivery_Date
    }

    %% Relationships
    PRODUCT ||--o{ VARIANT : "has"
    CATEGORY ||--o{ PRODUCT : "contains"
    USER ||--o{ CART : "owns"
    CART ||--o{ CART_ITEM : "contains"
    VARIANT ||--o{ CART_ITEM : "is_in"
    PRODUCT ||--o{ CART_ITEM : "referenced_by"
    CITY ||--o{ USER : "located_in"
    USER ||--o{ ORDER : "places"
    CART ||--o{ ORDER : "used_in"
    DELIVERY ||--o{ ORDER : "delivers"
